New version of security Layout and vulnerabilities articles

--- a/_posts/security/fr/2020-08-02-CSRF.md
+++ b/_posts/security/fr/2020-08-02-CSRF.md
@@ -2,7 +2,7 @@
 layout: post
 title: "CSRF 1"
 desc: "Faille CSRF dans eonweb / Localisation : module/module_frame/index.php / Paramètre d'injection : url / Niveau : Faible "
-ref: SQL-injection
+ref: CSRF-1
 categories: [security, EyesOfNetwork]
 lang: fr
 permalink: /fr/security/:title
@@ -18,21 +18,16 @@ Nous n'avons aucune connaissance d'une exploitation de cette faille à ce jour.
 
 ## Versions concernée(s)
 
-Ci dessous la liste des versions étant **SURES** d'être touchées.
-**Attention**, d'autres versions peuvent l'être sans que nous en ayons connaissance. C'est pourquoi il sera toujours recommandé de mettre à jour votre EON régulierement.
-
 **EON 5.3** (Toutes les versions)
-
-
 
 ## Versions patchées
 
-Pas de patch effectué sur cette faille.
+Non patchée.
 
 ## Correction
 
-Pas de correction effectué en raison de la structure du site qui oblige l'existence de cette faille. Mais comme dit précedemment, il a été conclu que cette faille ne constitue pas de danger en soit.
+Non corrigée.
 
 ## Liens relatifs
 
-https://github.com/EyesOfNetworkCommunity/eonweb/issues/67
+[https://github.com/EyesOfNetworkCommunity/eonweb/issues/67](https://github.com/EyesOfNetworkCommunity/eonweb/issues/67)
