--- a/_posts/security/fr/2020-08-02-XSS.md
+++ b/_posts/security/fr/2020-08-02-XSS.md
@@ -2,7 +2,7 @@
 layout: post
 title: "XSS 1"
 desc: "Faille XSS dans eonweb / Localisation : module/module_frame/index.php / Paramètre d'injection : url / Niveau : Moyen "
-ref: SQL-injection
+ref: XSS-1
 categories: [security, EyesOfNetwork]
 lang: fr
 permalink: /fr/security/:title
@@ -18,31 +18,19 @@ Nous n'avons aucune connaissance d'une exploitation de cette faille à ce jour.
 
 ## Versions concernée(s)
 
-Ci dessous la liste des versions étant **SURES** d'être touchées.
-**Attention**, d'autres versions peuvent l'être sans que nous en ayons connaissance. C'est pourquoi il sera toujours recommandé de mettre à jour votre EON régulierement.
-
-**EON 5.3** (Toutes les versions jusqu'à la 5.3--)
-
-
+**EON 5.3** (Toutes les versions jusqu'à la 5.3-8)
 
 ## Versions patchées
 
-Ci dessous la liste des versions étant **SURES** d'être patchées et donc qui ne sont plus vulnérables.
-
 Toutes les versions d'EON après la version : 
 
-**EON 5.3-7** (EON 5.3-7 comprise)
+[EON 5.3-9](https://github.com/EyesOfNetworkCommunity/eonweb/releases/tag/5.3-9)
 
 ## Correction
 
-La faille a été corrigé et n'est plus possible dans la dernière version d'EON.
-Si vous voulez vous assurer que votre système ne soit plus vulnérable, nous vous invitons donc à effectuer un :
-
-``` 
-yum update 
-```
+Télécharger la dernière version d'EON patchée.
 
 
 ## Liens relatifs
 
-https://github.com/EyesOfNetworkCommunity/eonweb/issues/67
+[https://github.com/EyesOfNetworkCommunity/eonweb/issues/67](https://github.com/EyesOfNetworkCommunity/eonweb/issues/67)
